RESOLVED FIXED252586
[WebGPU] RemoteShaderModule::CompilationInfo results in an IPC exception
https://bugs.webkit.org/show_bug.cgi?id=252586
Summary [WebGPU] RemoteShaderModule::CompilationInfo results in an IPC exception
Mike Wyrzykowski
Reported 2023-02-20 11:26:39 PST
[WebGPU] RemoteShaderModule::CompilationInfo results in an IPC exception
Attachments
Radar WebKit Bug Importer
Comment 1 2023-02-20 11:27:01 PST
Mike Wyrzykowski
Comment 2 2023-02-20 12:47:35 PST
EWS
Comment 3 2023-02-22 01:11:25 PST
Committed 260664@main (bfcd800c0db8): <https://commits.webkit.org/260664@main> Reviewed commits have been landed. Closing PR #10385 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.