[WebGPU] RemoteShaderModule::CompilationInfo results in an IPC exception https://bugs.webkit.org/show_bug.cgi?id=252586 <radar://105688260>

Reviewed by Myles C. Maxfield.

This is an async reply, so use sendWithAsyncReply as async reply from a
sync IPC is not supported.

* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteShaderModule.messages.in:
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteShaderModuleProxy.cpp:
(WebKit::WebGPU::RemoteShaderModuleProxy::compilationInfo):
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteShaderModuleProxy.h:

Canonical link: https://commits.webkit.org/260664@main